2021-04-22 Philipp Klaus Krause <pkk AT spth.de>

	* sdcc/support/regression/tests/setjmp.c,
	  sdcc/support/regression/tests/loop.c:
	  Skip tests that fail due to broken FreeBSD 13 setjmp.

2021-04-20 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  Improve heuristic for use of rabbit mul.

2021-04-19 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  Use genCopy also for assignment with source on extended stack.

2021-04-18 Sebastian 'basxto' Riedel <sdcc@basxto.de>

	* support/makebin/makebin.c:
	  Generate SMS/GG rom headers.

2021-04-13 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCbtree.h,
	  src/SDCCbtree.cc:
	  Use int consistently for block, patch by Oleg Endo.

2021-04-13 Sebastian 'basxto' Riedel <sdcc@basxto.de>

	* src/z80/gen.c:
	  Overwrite A in genMove_o only if not source register.

2021-04-12 Sebastian 'basxto' Riedel <sdcc@basxto.de>

	* src/z80/gen.c:
	  Get sign bit with rlca instead of rla to allow flag restricted ph rules.

2021-04-12 Sebastian 'basxto' Riedel <sdcc@basxto.de>

	* sdas/asgb/gbpst.c,
	  sdas/asgb/gbmch.c,
	  sdas/asgb/gb.h,
	  sdas/asxxsrc/asmain.c,
	  sdas/asxxsrc/asxxxx.h:
	  Backport .incbin and .tile for sm83 from ASXXXX 5.40

2021-04-12 Sebastian 'basxto' Riedel <sdcc@basxto.de>

	* src/z80/gen.c,
	  src/z80/peeph-gbz80.def,
	  src/z80/peeph.def:
	  Don't emit pop/push for stack adjustment on sm83.
	  (For easier detection of uninitialized memory)

2021-04-11 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  Improve unsigned shift by 4 and 5.

2021-04-11 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  Avoid some unnecessary copies.

2021-04-09 Philipp Klaus Krause <pkk AT spth.de>

	* support/regression/tests/bitfields-bits1.c,
	  support/regression/tests/bitfields-bits2.c,
	  support/regression/tests/bitfields-checks.c,
	  support/regression/tests/bitfields-dead-loop.c:
	  Tests for bitfields at absolute addresses, picked from patch #373 by Visenri.
	* src/z80/gen.c,